# SSVproff

./: .commitlintrc.json  .cspell.json  .editorconfig  .gitignore  .markdownlint.json  .nvmrc  .pre-commit-config.yaml  AUTHENTICATION_SETUP.md  CHANGELOG.md  CHANGE_PASSWORD_GUIDE.md  CONFIGURATION_SUMMARY.md  CONFIG_FIX_SUMMARY.md  CONTRIBUTING.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PULL_INSTRUCTIONS.md  PUSH_GUIDE.md  QUICK_START_WINDOWS.md  README.md  SECURITY.md  SETUP_GUIDE.md  SETUP_REPORT.md  TESTING_REPORT.md  WEB_SETUP_GUIDE.md  YAML_COMPARISON.md  YAML_FIX_INSTRUCTIONS.md  commitlint.config.js  docker-compose.yml  mkdocs.yml  package.json  pages.yml.corrected  pages.yml.fixed  pnpm-workspace.yaml  tsconfig.json  ИНСТРУКЦИЯ_ДЛЯ_SSV.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.husky/: commit-msg  pre-commit
api/: .dockerignore  .env.example  .flake8  .python-version  Dockerfile  README.md  README_CHANGE_PASSWORD.md  README_SSV_ADMIN.md  alembic.ini  change_password.py  init_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  update_admin_email.py
api/alembic/: env.py
api/alembic/versions/: 5c4913ea8cc1_create_users_table.py  6d8f24eb9dd2_create_tasks_table.py
api/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
api/app/api/: __init__.py  deps.py
api/app/api/v1/: __init__.py  api.py
api/app/api/v1/endpoints/: __init__.py  auth.py  health.py  tasks.py
api/app/core/: __init__.py  config.py  security.py
api/app/db/: __init__.py  base.py  session.py
api/app/models/: __init__.py  task.py  user.py
api/app/routers/: __init__.py  auth.py  projects.py
api/app/schemas/: __init__.py  auth.py  task.py  user.py
api/app/services/: __init__.py  auth.py  task.py
api/docs/: AUTHENTICATION.md  authentication.md  database_setup.md
api/scripts/: create_migration.sh  init_db.py  run_migrations.sh
api/tests/: __init__.py  conftest.py  test_auth_endpoints.py  test_database.py  test_main.py  test_security.py  test_task_endpoints.py
api/tests/api/: __init__.py  test_health.py
docs/: api.md  architecture.md  automation.md  configuration.md  file-management.md  index.md  requirements.txt  security.md  setup.md  usage.md
docs/adr/: template.md  (+1 more)
flows/: dvc-remote-example.sh  rclone-example.conf
scripts/: setup-packages.sh
web/: .env.example  .eslintrc.json  .prettierignore  .prettierrc  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.json
(+20 files in other folders)
